<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ad_privacy_policy">Privacy policy</string>
    <string name="all_sounds">All Sounds</string>
    <string name="app_name">Sleeping Sounds</string>
    <string name="bed_friday">F</string>
    <string name="bed_monday">M</string>
    <string name="bed_reminder_hint">Regular bedtime helps form healthy sleep habits</string>
    <string name="bed_saturday">S</string>
    <string name="bed_sunday">S</string>
    <string name="bed_thursday">T</string>
    <string name="bed_tuesday">T</string>
    <string name="bed_wednesday">W</string>
    <string name="bedtime_reminder">Bedtime Reminder</string>
    <string name="bedtime_reminder_off">@string/off</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="count_time_zero">@string/timer</string>
    <string name="cover">Cover</string>
    <string name="current_selection">Current Selection</string>
    <string name="custom">Custom</string>
    <string name="custom_set_time_hour">Hour</string>
    <string name="custom_set_time_minute">Minute</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="feedback">Feedback</string>
    <string name="gcm_defaultSenderId">511249835125</string>
    <string name="link_policy">http://aridealgames.blogspot.com/2017/05/privacy-policy-ar-ideal-games-its.html</string>
    <string name="it_s_time_for_bed">It\'s time for bed.</string>
    <string name="max_select_toast">You can select at most %s sounds</string>
    <string name="mix_sound_name_autumn_jungle">Autumn Jungle</string>
    <string name="mix_sound_name_babbling_brook">Babbling Brook</string>
    <string name="mix_sound_name_beach">Beach</string>
    <string name="mix_sound_name_cafe">@string/sound_name_cafe</string>
    <string name="mix_sound_name_cave">Cave</string>
    <string name="mix_sound_name_city_life">City Life</string>
    <string name="mix_sound_name_cold_winter">Cold Winter</string>
    <string name="mix_sound_name_countryside">Countryside</string>
    <string name="mix_sound_name_deep_relaxation">Deep Relaxation</string>
    <string name="mix_sound_name_deep_thinking">Deep Thinking</string>
    <string name="mix_sound_name_dryer">@string/sound_name_dryer</string>
    <string name="mix_sound_name_evening_beach">Evening Beach</string>
    <string name="mix_sound_name_fire">@string/sound_name_fire</string>
    <string name="mix_sound_name_flying_sky">Flying Sky</string>
    <string name="mix_sound_name_focus">@string/sound_name_focus</string>
    <string name="mix_sound_name_forest_adventure">Forest Adventure</string>
    <string name="mix_sound_name_library">Library</string>
    <string name="mix_sound_name_lullaby_music_box">Lullaby Music Box</string>
    <string name="mix_sound_name_meditate_in_forest">Meditate in Forest</string>
    <string name="mix_sound_name_meditation">@string/sound_name_meditation</string>
    <string name="mix_sound_name_memories">Memories</string>
    <string name="mix_sound_name_nature_melody">Nature Melody</string>
    <string name="mix_sound_name_peaceful_night">Peaceful Night</string>
    <string name="mix_sound_name_rain_in_forest">Rain in Forest</string>
    <string name="mix_sound_name_rain_on_roof">Rain on Roof</string>
    <string name="mix_sound_name_rainy_weekend">Rainy Weekend</string>
    <string name="mix_sound_name_relax_time">Relax Time</string>
    <string name="mix_sound_name_spring_rain">Spring Rain</string>
    <string name="mix_sound_name_train_journey">Train Journey</string>
    <string name="mix_sound_name_universe">@string/sound_name_universe</string>
    <string name="mix_sound_name_yoga_music">Yoga Music</string>
    <string name="mix_sound_name_zen">@string/sound_name_zen</string>
    <string name="name">Name</string>
    <string name="no_items">No items</string>
    <string name="off">Off</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="repeat">Repeat</string>
    <string name="reset">Reset</string>
    <string name="roboto_medium">roboto_medium</string>
    <string name="roboto_regular">roboto</string>

    <string name="email">idealgames2015@gmail.com</string>
    <string name="save_custom">Save custom</string>
    <string name="save_successfully">Saved successfully</string>
    <string name="selected">Selected</string>
    <string name="set_success">Set successfully</string>
    <string name="set_time_hours">%s hours</string>
    <string name="set_time_mins">%s mins</string>
    <string name="set_time_one_hour">1 hour</string>
    <string name="set_timer">Set Timer</string>
    <string name="sound_name_astral">Astral</string>
    <string name="sound_name_bird">Bird</string>
    <string name="sound_name_brahms_lullaby">Brahms Lullaby</string>
    <string name="sound_name_brown_noise">Brown Noise</string>
    <string name="sound_name_cafe">Cafe</string>
    <string name="sound_name_cat_purring">Cat Purring</string>
    <string name="sound_name_cave">Cave</string>
    <string name="sound_name_cricket">Cricket</string>
    <string name="sound_name_crowd">Crowd</string>
    <string name="sound_name_deep_sea">Deep Sea</string>
    <string name="sound_name_dream">Dream</string>
    <string name="sound_name_driving">Driving</string>
    <string name="sound_name_dryer">Dryer</string>
    <string name="sound_name_evening_beach">Evening Beach</string>
    <string name="sound_name_fire">Fire</string>
    <string name="sound_name_flight">Flight</string>
    <string name="sound_name_flute">Flute</string>
    <string name="sound_name_focus">Focus</string>
    <string name="sound_name_forest">Forest</string>
    <string name="sound_name_frog">Frog</string>
    <string name="sound_name_harp">Harp</string>
    <string name="sound_name_heavy_rain">Heavy Rain</string>
    <string name="sound_name_jazz">Jazz</string>
    <string name="sound_name_light_rain">Light Rain</string>
    <string name="sound_name_meditation">Meditation</string>
    <string name="sound_name_melody">Melody</string>
    <string name="sound_name_music_box">Music Box</string>
    <string name="sound_name_night">Night</string>
    <string name="sound_name_owl">Owl</string>
    <string name="sound_name_parrot">Parrot</string>
    <string name="sound_name_piano">Piano</string>
    <string name="sound_name_piano_2">Piano 2</string>
    <string name="sound_name_pink_noise">Pink Noise</string>
    <string name="sound_name_rain">Rain</string>
    <string name="sound_name_rain_in_city">Rain in City</string>
    <string name="sound_name_rain_on_car_roof">Rain on Car Roof</string>
    <string name="sound_name_rain_on_car_window">Rain on Car</string>
    <string name="sound_name_rain_on_leaves">Rain on Leaves</string>
    <string name="sound_name_rain_on_roof">Rain on Roof</string>
    <string name="sound_name_rain_on_tent">Rain on Tent</string>
    <string name="sound_name_rain_on_window">Rain on Window</string>
    <string name="sound_name_rainstorm">Rainstorm</string>
    <string name="sound_name_river">River</string>
    <string name="sound_name_snow">Snow</string>
    <string name="sound_name_storm">Storm</string>
    <string name="sound_name_thunder">Thunder</string>
    <string name="sound_name_thunderstorm">Thunderstorm</string>
    <string name="sound_name_tide">Tide</string>
    <string name="sound_name_train">Train</string>
    <string name="sound_name_universe">Universe</string>
    <string name="sound_name_urban_rain">Urban Rain</string>
    <string name="sound_name_waves">Waves</string>
    <string name="sound_name_whales">Whales</string>
    <string name="sound_name_white_noise">White Noise</string>
    <string name="sound_name_wind">Wind</string>
    <string name="sound_name_wind_leaves">Wind Leaves</string>
    <string name="sound_name_wolf">Wolf</string>
    <string name="sound_name_womb">Womb</string>
    <string name="sound_name_yoga_music">Yoga Music</string>
    <string name="sound_name_zen">Zen</string>
    <string name="tab_mixes">Mixes</string>
    <string name="tab_setting">Settings</string>
    <string name="tab_sounds">Sounds</string>
    <string name="timer">Timer</string>
    <string name="unlock_all_sounds">Unlock all sounds</string>
    <string name="unlock_mix_hint">Watch a short video to get this premium mix</string>
</resources>
