<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/full_screen_status_bar_hide_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/vector_ic_back"
        app:titleTextAppearance="@style/TitleText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/bedtime_reminder"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/bedtime_reminder"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/bed_remind_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:theme="@style/SwitchTheme" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"

        android:text="@string/bed_reminder_hint"
        android:textColor="@color/white_50"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/bed_remind_set_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/reminder_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bed_remind_set_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="3dp"
                app:srcCompat="@drawable/vector_ic_arrow_drop_down" />
        </RelativeLayout>

        <TextView
            android:id="@+id/bed_reminder_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"

            android:textColor="@color/white_50"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/set_repeat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="26dp"

        android:text="@string/repeat"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bed_remind_day_1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_sunday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_monday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_tuesday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_wednesday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_thursday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_6"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_friday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bed_remind_day_7"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_day_unselect_bg"

            android:gravity="center"
            android:text="@string/bed_saturday"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bed_remind_select"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_checked_bg"
        android:padding="15dp"
        app:srcCompat="@drawable/vector_ic_done" />
</LinearLayout>
